src/test/deca/syntax/valid/declClass-nameExtends.deca
class Extends {}

class A extends Extends{}
