src/test/deca/syntax/invalid/declClass-tooMuchExtends.deca
class A extends B extends C {
}